2025-11-12T00:58:36Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/19282885928 # 806
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-12
* notice: last 14d: unq all: 3 3
* notice: prev accum: outdated-unq outdated-all / unq all: 409 583 / 413 587
* notice: next accum: outdated-unq outdated-all / unq all: 410 584 / 413 587
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-10-28] / []

2025-11-10T01:00:58Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/19217345759 # 804
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-10
* notice: last 14d: unq all: 4 4
* notice: prev accum: outdated-unq outdated-all / unq all: 408 582 / 412 586
* notice: next accum: outdated-unq outdated-all / unq all: 409 583 / 413 587
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-10-26] / [2025-11-09]

2025-11-09T01:00:54Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/19201088345 # 803
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-09
* notice: last 14d: unq all: 4 4
* notice: prev accum: outdated-unq outdated-all / unq all: 407 581 / 412 586
* notice: next accum: outdated-unq outdated-all / unq all: 408 582 / 412 586
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-10-25] / []

2025-11-07T00:57:58Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/19154693657 # 801