@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-11-12T00:58:36Z",
-  "count_outdated" : 584,
-  "uniques_outdated" : 410,
+  "timestamp" : "2025-11-14T00:58:39Z",
+  "count_outdated" : 585,
+  "uniques_outdated" : 411,
   "count" : 587,
   "uniques" : 413,
   "clones" : [
-    {
-      "timestamp": "2025-10-30T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-11-02T00:00:00Z",
       "count": 1,
