@@ -1,3 +1,12 @@
+2025-11-14T00:58:39Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/19350741619 # 808
+* notice: Stats Output Repository: https://github.com/andry81-stats/andry81--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-14
+* notice: last 14d: unq all: 2 2
+* notice: prev accum: outdated-unq outdated-all / unq all: 410 584 / 413 587
+* notice: next accum: outdated-unq outdated-all / unq all: 411 585 / 413 587
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2025-10-30] / []
+
 2025-11-12T00:58:36Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/19282885928 # 806
 * notice: Stats Output Repository: https://github.com/andry81-stats/andry81--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-12
